Recommend ensurepip instead of get-pip.py
Avoids manual download of the get-pip.py file.

--- a/doc/install.txt
+++ b/doc/install.txt
@@ -54,8 +54,8 @@ https://docs.microsoft.com/en-us/windows/python/beginners
 
 Setup for macOS
 ------------------
-Python from Homebrew includes pip_. Otherwise ``get-pip.py`` can be used to
-install pip_ (untested):
+Python from Homebrew includes pip_. Otherwise ``python3 -m ensurepip --upgrade`` can be
+used to install pip_ (untested):
 https://pip.pypa.io/en/stable/installation/
 
 Setup for GNU/Linux
