--- a/doc/i18n/gettext/index.pot
+++ b/doc/i18n/gettext/index.pot
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: LinkChecker 10.0.1.post91+g7f175c13\n"
+"Project-Id-Version: LinkChecker 10.0.1.post124+ga12fcf04\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-12-14 19:27+0000\n"
+"POT-Creation-Date: 2021-12-21 19:40+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
