--- a/doc/man/en/linkcheckerrc.5
+++ b/doc/man/en/linkcheckerrc.5
@@ -174,7 +174,7 @@ Command line option: \fB\-\-check\-extern\fP
 .TP
 \fBentry=\fP\fIREGEX\fP \fIUSER\fP [\fIPASS\fP] (\fI\%MULTILINE\fP)
 Provide individual username/password pairs for different links. In
-addtion to a single login page specified with \fBloginurl\fP multiple
+addition to a single login page specified with \fBloginurl\fP multiple
 FTP, HTTP (Basic Authentication) and telnet links are supported.
 Entries are a triple (URL regex, username, password) or a tuple (URL
 regex, username), where the entries are separated by whitespace.
