Replace setuptools and setup.py with hatch and pyproject.toml

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -2,6 +2,11 @@
 
 Changes:
 - PyXDG is no longer used
+- setuptools and setup.py replaced with hatchling and pyproject.toml
+- The application version is derived from git tags using hatch-vcs
+- Documentation build is run using hatch
+- Binary translation catalogs are compiled using polib during distribution
+  package building and are now included in sdist packages
 
 
 10.1.0 (released 22.12.2021)
