--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -7,6 +7,7 @@ Changes:
 - Documentation build is run using hatch
 - Binary translation catalogs are compiled using polib during distribution
   package building and are now included in sdist packages
+- Warning url-rate-limited renamed to http-rate-limited.
 
 
 10.1.0 (released 22.12.2021)
